--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
-    "nconf-camel-cased": "^5.0.0",
-    "node-fetch": "^2.3.0",
-    "request": "^2.88.0"
+    "nconf-camel-cased": "^5.0.0"
   }
 }
