--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "beepbeep": "^1.2.2",
+    "clearbit": "^1.3.4",
+    "eventbrite": "^1.2.1",
     "express": "^4.16.4",
-    "nconf-camel-cased": "^5.0.0"
+    "face-recognition": "^0.9.4",
+    "nconf-camel-cased": "^5.0.0",
+    "node-fetch": "^2.3.0",
+    "pipe2jpeg": "^0.2.7",
+    "rxjs": "^6.4.0"
   }
 }
