switched to use webcam and added bugfixes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "face-recognition": "^0.9.4",
     "nconf-camel-cased": "^5.0.0",
     "node-fetch": "^2.3.0",
+    "node-webcam": "^0.4.6",
     "pipe2jpeg": "^0.2.7",
     "rxjs": "^6.4.0"
   }
